--- a/http/learn/learn.css
+++ b/http/learn/learn.css
@@ -82,7 +82,7 @@
 }
 #tree-inner .course a {
 	z-index: 3;
-	background: #3af;
+	background: #99e6ff;
 	padding: 0.22em 0.44em;
 	border-radius: 0.22em;
 	font-size: 18em;
@@ -113,7 +113,7 @@
 }
 #tree-inner .course:hover a {
 	box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
-	background: #4cf;
+	background: #cef;
 	color: #333;
 }
 #tree-inner .course:active a { color: #00f }
