--- a/http/formatting.css
+++ b/http/formatting.css
@@ -2,8 +2,8 @@ section { padding: 6px }
 :not(:hover) > a.grey { display: none }
 table {
 	background: rgba(255, 255, 192, 0.5);
-	padding: 4px;
-	margin: 6px 8px 6px 32px;
+	padding: 0.25em;
+	margin: 0.4em 0.5em 0.4em 2em;
 }
 table code {
 	display: inline-block;
