--- a/http/learn/course.css
+++ b/http/learn/course.css
@@ -5,6 +5,7 @@
 }
 #row, #ide { flex-grow: 1 }
 #text-inner h1 { margin-top: 0.2em }
+#text-inner h1.noborder { margin: 0.2em 0 0 }
 h2 {
 	margin-top: 0;
 	border-bottom: 1px dashed #aaa;
@@ -19,7 +20,6 @@ h2 {
 	position: relative;
 	width: 100%;
 	flex-shrink: 0;
-	padding-bottom: 2px;
 }
 h1, h2, h3, h4, h5, h6, #text code:not(#validator-display) { color: #000 }
 #text code:not(#validator-display) { background: #fff }
@@ -27,7 +27,7 @@ h1, h2, h3, h4, h5, h6, #text code:not(#validator-display) { color: #000 }
 #text a:visited { color: #444 }
 #text a:hover { color: #15f }
 #text a:active { color: #02d }
-#text-inner, #cntrls { padding: 0 6px }
+#text-inner, #cntrls { padding: 0 0.4em }
 #text-inner input { margin: 0 }
 @media (max-width: 800px) {
 	#html { flex-grow: 3 }
@@ -42,38 +42,45 @@ h1, h2, h3, h4, h5, h6, #text code:not(#validator-display) { color: #000 }
 		flex-direction: row;
 		min-height: 500px;
 	}
-	#html { margin-right: 6px }
+	#html { margin-right: 0.4em }
 	#html, #output { flex: 1 1 0 }
+}
+#cntrls { padding: 0.1em 0.4em }
+#cntrls form {
+	display: inline-block;
+	margin: 0;
+}
+#cntrls.meta { background: #0ff }
+@media (max-width: 1200px) {
+	#ide { margin: 0 0.2em }
 }
 @media (min-width: 1200px) {
 	#row { flex-direction: row }
 	#text { width: 40% }
-	#ide { margin-left: 6px }
+	#ide { margin-left: 0.4em }
 	#html, #output { margin-top: 0 }
 	#text-inner {
 		overflow: auto;
 		position: absolute;
-		top: 0; right: 0; bottom: 26px; left: 0;
+		top: 0; right: 0; bottom: 1.5em; left: 0;
 	}
 	#cntrls {
 		position: absolute;
-		height: 26px;
 		left: 0; bottom: 0;
-		padding: 4px 6px 2px;
-		width: 100%;
+		width: 100%; height: 1.5em;
 		background: #ccc;
 	}
 }
 #check {
 	width: 100%;
 	max-width: 400px;
-	font-size: 18px;
-	padding: 4px 8px;
+	font-size: 1.1em;
+	padding: 0.25em 0.5em;
 	background: rgba(0, 220, 0, 0.6);
 	transition: background-color 0.4s;
 	border: none;
 	box-shadow: 1px 1px 2px #444;
-	margin-bottom: 12px;
+	margin-bottom: 0.75em;
 }
 #check:hover { background: rgba(80, 220, 80, 0.6) }
 #check:active {
@@ -81,10 +88,10 @@ h1, h2, h3, h4, h5, h6, #text code:not(#validator-display) { color: #000 }
 	background: rgba(0, 200, 0, 0.6);
 }
 .passed, .failed {
-	margin: 4px 0;
+	margin: 0.25em 0;
 	position: absolute;
 	width: 100%;
-	padding: 4px;
+	padding: 0.25em;
 	transform-origin: top;
 	-webkit-transform-origin: top;
 	transform: scaleY(0);
