--- a/http/dev/program.css
+++ b/http/dev/program.css
@@ -12,11 +12,14 @@ section { background: transparent }
 	position: absolute;
 	width: 100%;
 }
-#main { padding: 0 }
+#main {
+	min-height: 600px;
+	padding: 0;
+}
 #content { padding-bottom: 0 }
 #meta {
-	padding: 4px;
-	margin-bottom: 6px;
+	padding: 0.25em;
+	margin-bottom: 0.4em;
 	background: rgba(255, 255, 255, 0.8);
 	color: #000;
 	text-align: left;
@@ -24,15 +27,14 @@ section { background: transparent }
 }
 #meta h1, h2, h3, h4, h5, h6 { color: #000 }
 #meta code { background: #fff }
-#meta a { color: #000 }
-#meta a:visited { color: #444 }
-#meta a:hover { color: #15f }
-#meta a:active, #meta .ctrl:active { color: #02d }
+#meta a:not(.red) { color: #000 }
+#meta :not(.connection-error) > a:visited:not(.red) { color: #444 }
+#meta a:hover:not(.red) { color: #15f }
+#meta a:active:not(.red), #meta .ctrl:active { color: #02d }
 #meta .connection-error a { color: #ffb }
 .comment { background: rgba(255, 255, 255, 0.4) }
 .c-sig, .c-sig > * { color: #666 }
 #output { width: 100% }
-#main { min-height: 600px }
 #edit-title {
 	width: 400px;
 	max-width: 100%;
@@ -68,6 +70,11 @@ section { background: transparent }
 	#ta-cont { margin-bottom: 0 }
 	.fullscreen #ta-cont { width: calc(5% + 70ch) }
 }
+#save:not(.modified) {
+	cursor: default;
+	color: #888;
+}
+#save.modified { color: #ff8 }
 #save.progress {
 	cursor: progress;
 	color: #4ff;
