Consolidate program CSS

--- a/http/dev/canvas.css
+++ b/http/dev/canvas.css
@@ -1,44 +1,5 @@
-section { background: transparent }
-#content, #main {
-	display: flex;
-	flex-direction: column;
-}
-#row {
-	display: flex;
-	align-items: stretch;
-}
-#main, #row { flex-grow: 1 }
-#footer {
-	position: absolute;
-	width: 100%;
-}
-#main {
-	min-height: 600px;
-	padding: 0;
-}
-#content { padding-bottom: 0 }
-#meta {
-	padding: 0.25em;
-	margin-bottom: 0.4em;
-	background: rgba(255, 255, 255, 0.8);
-	color: #000;
-	text-align: left;
-	font-size: 1rem;
-}
-#meta h1, h2, h3, h4, h5, h6 { color: #000 }
-#meta code { background: #fff }
-#meta a:not(.red) { color: #000 }
-#meta :not(.connection-error) > a:visited:not(.red) { color: #444 }
-#meta a:hover:not(.red) { color: #15f }
-#meta a:active:not(.red), #meta .ctrl:active { color: #02d }
-#meta .connection-error a { color: #ffb }
-.comment { background: rgba(255, 255, 255, 0.4) }
-.c-sig, .c-sig > * { color: #666 }
+#main { min-height: 600px }
 #output { width: 100% }
-#edit-title {
-	width: 400px;
-	max-width: 100%;
-}
 @media (max-width: 719px) {
 	#row { flex-direction: column }
 	#ta-cont {
@@ -69,67 +30,4 @@ section { background: transparent }
 @media (min-width: 1500px) {
 	#ta-cont { margin-bottom: 0 }
 	.fullscreen #ta-cont { width: calc(5% + 70ch) }
-}
-#save:not(.modified) {
-	cursor: default;
-	color: #888;
-}
-#save.modified { color: #ff8 }
-#save.progress {
-	cursor: progress;
-	color: #4ff;
-}
-#up, #dn {
-	width: 22px;
-	height: 24px;
-	fill: #777;
-}
-#up:hover, #dn:hover {
-	fill: #888;
-	transition: fill 0.1s;
-}
-#up:active, #dn:active {
-	fill: #666;
-	transition: none;
-}
-#up.clkd, #dn.clkd {
-	fill: #f90;
-}
-#fl {
-	width: 20px;
-	height: 24px;
-	fill: #f44;
-	margin-left: 12px;
-}
-#fl:hover {
-	fill: #f55;
-	transition: fill 0.2s;
-}
-#fl.clkd {
-	fill: #f00;
-}
-#fl:active {
-	transition: fill 0.1s;
-	fill: #c00;
-}
-#comment:target + #addcomment { display: none }
-.up { fill: #888 }
-.up:hover {
-	fill: #999;
-	transition: fill 0.1s;
-}
-.up:active {
-	fill: #777;
-	transition: none;
-}
-.clkd > .up { fill: #f90 }
-.fl { fill: #f88 }
-.fl:hover {
-	fill: #f66;
-	transition: fill 0.2s;
-}
-.fl.clkd { fill: #f00 }
-.fl:active {
-	transition: fill 0.1s;
-	fill: #c00;
 }
