--- a/http/dev/html.css
+++ b/http/dev/html.css
@@ -1,36 +1,8 @@
-section { background: transparent }
-#content, #main, #right, #outputbox, #left {
+#right, #outputbox, #left {
 	display: flex;
 	flex-direction: column;
 }
-#row {
-	display: flex;
-	align-items: stretch;
-}
-#main, #row, #outputbox, #output, .ta-cont, #right { flex-grow: 1 }
-#footer {
-	position: absolute;
-	width: 100%;
-}
-#main { padding: 0 }
-#content { padding-bottom: 0 }
-#meta {
-	padding: 0.25em;
-	margin-bottom: 0.4em;
-	background: rgba(255, 255, 255, 0.8);
-	color: #000;
-	text-align: left;
-	font-size: 1rem;
-}
-#meta h1, h2, h3, h4, h5, h6 { color: #000 }
-#meta code { background: #fff }
-#meta a:not(.red) { color: #000 }
-#meta :not(.connection-error) > a:visited:not(.red) { color: #444 }
-#meta a:hover:not(.red) { color: #15f }
-#meta a:active:not(.red), #meta .ctrl:active { color: #02d }
-#meta .connection-error a { color: #ffb }
-.comment { background: rgba(255, 255, 255, 0.4) }
-.c-sig, .c-sig > * { color: #666 }
+#outputbox, #output, .ta-cont, #right { flex-grow: 1 }
 .ta-cont {
 	margin: 2px 0;
 	flex-basis: 0;
@@ -40,10 +12,6 @@ section { background: transparent }
 	flex-grow: 0.1;
 }
 #js-cont { margin-bottom: 0 }
-#edit-title {
-	width: 400px;
-	max-width: 100%;
-}
 #outputbox { margin-bottom: 2px }
 @media (max-width: 699px) {
 	#row { flex-direction: column }
@@ -67,57 +35,4 @@ section { background: transparent }
 		width: 50%;
 	}
 	#right { margin-left: 0.5em }
-}
-#save:not(.modified) {
-	cursor: default;
-	color: #888;
-}
-#save.modified { color: #ff8 }
-#save.progress {
-	cursor: progress;
-	color: #4ff;
-}
-#up, #dn { fill: #777 }
-#up:hover, #dn:hover {
-	fill: #888;
-	transition: fill 0.1s;
-}
-#up:active, #dn:active {
-	fill: #666;
-	transition: none;
-}
-#up.clkd, #dn.clkd { fill: #f90 }
-#fl {
-	fill: #f44;
-	margin-left: 12px;
-}
-#fl:hover {
-	fill: #f55;
-	transition: fill 0.2s;
-}
-#fl.clkd { fill: #f00 }
-#fl:active {
-	transition: fill 0.1s;
-	fill: #c00;
-}
-#comment:target + #addcomment { display: none }
-.up { fill: #888 }
-.up:hover {
-	fill: #999;
-	transition: fill 0.1s;
-}
-.up:active {
-	fill: #777;
-	transition: none;
-}
-.clkd > .up { fill: #f90 }
-.fl { fill: #f88 }
-.fl:hover {
-	fill: #f66;
-	transition: fill 0.2s;
-}
-.fl.clkd { fill: #f00 }
-.fl:active {
-	transition: fill 0.1s;
-	fill: #c00;
 }
