--- a/http/qa/question.css
+++ b/http/qa/question.css
@@ -83,7 +83,7 @@ code.blk:empty { display: none }
 #answertips {
 	z-index: -1;
 	bottom: 100%; left: 0;
-	background: #ffa;
+	background: #ffc;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 	border: 1px solid #888;
 	opacity: 0;
