--- a/http/a/main.css
+++ b/http/a/main.css
@@ -547,10 +547,7 @@ a.blk:active { color: #00f }
 	transition: none;
 }
 .button.larger span { vertical-align: bottom }
-a svg {
-	vertical-align: middle;
-	margin-right: 0.25em;
-}
+a svg { vertical-align: middle }
 .button svg { margin-right: 0.35em }
 input[type=text], input[type=email], input[type=password] { width: 18em }
 input[type=text], input[type=email], input[type=number], input[type=search], input[type=password], textarea {
