--- a/http/dev/program.css
+++ b/http/dev/program.css
@@ -58,10 +58,9 @@ textarea.abs { top: 0; bottom: 0 }
 	transition: none;
 }
 #up.clkd, #dn.clkd { fill: #f90 }
-#fl {
-	fill: #f44;
-	margin-left: 12px;
-}
+a.ctrl[title] { margin-right: 0.25em }
+a.ctrl[title]:last-of-type { margin-left: 1em }
+#fl { fill: #f44 }
 #fl:hover {
 	fill: #f55;
 	transition: fill 0.2s;
