--- a/http/qa/question.css
+++ b/http/qa/question.css
@@ -72,7 +72,7 @@ code.blk:empty { display: none }
 .ctrlicon:active { background: #ddd }
 .editbtn, .editbtn:hover { color: #0b0 }
 .editbtn:visited { color: #090 }
-.delbtn, .delbtn:hover { color: #f00 }
+.delbtn, .delbtn:hover, .delbtn:visited { color: #f00 }
 .commentform:target + .addcomment { display: none }
 #answer, #answerta { z-index: 1 }
 #answerta:focus + #answertips, #answertips:hover {
