--- a/http/qa/question.css
+++ b/http/qa/question.css
@@ -89,7 +89,7 @@ code.blk:empty { display: none }
 	opacity: 0;
 	transition: opacity 0.2s ease-out;
 }
-.answer:not(:first-of-type) { margin-top: 8px }
+[typeof='Answer'] { margin-top: 0.5em }
 .tag-diff .tag { background: #aaa }
 .tag-diff del .tag { background: #faa }
 .tag-diff ins .tag { background: #afa }
