--- a/http/a/main.css
+++ b/http/a/main.css
@@ -47,7 +47,7 @@ body {
 .sumar, :not(img) + .desc, .blk, form *, .comment > blockquote:nth-child(2), .comment > pre:nth-child(2) { margin-top: 3px }
 .umar, :not(.row):not(.flex):not(.resp-flex) > section:not(:first-child), article:not(:first-child), form:not([action='/search/']), .connection-error, #footer, #sidebar { margin-top: 4px }
 #userlist .user { margin-top: 0.4em }
-.bumar, h1:not(:first-child), fieldset:not(:first-of-type) { margin-top: 0.5em }
+.bumar, .edit-comment, h1:not(:first-child), fieldset:not(:first-of-type) { margin-top: 0.5em }
 .bmar, .max-width, .error, .half, #notifs li { margin-bottom: 0.4em }
 .indt { margin-left: 2em }
 ul { padding-left: 2em }
