--- a/http/a/main.css
+++ b/http/a/main.css
@@ -105,13 +105,35 @@ abbr { border-bottom: 1px dashed #222 }
 	width: 100%;
 	flex-shrink: 0;
 }
-.question-preview {
-	width: 600px;
-	max-width: 100%;
-	margin-right: 1em;
-}
 @media (max-width: 600px) {
-	.question-preview:nth-of-type(n+3) { display: none }
+	.small-q-previews .question-preview:nth-of-type(n+3) { display: none }
+}
+@media (max-width: 1249px) {
+	.small-q-previews .question-preview:nth-of-type(n+4) { display: none }
+}
+@media (max-width: 1999px) {
+	.small-q-previews .question-preview:nth-of-type(n+7) { display: none }
+}
+@media (min-width: 1250px) and (max-width: 1999px) {
+	.question-preview {
+		margin-right: 1.5em;
+		width: calc(100% / 2 - 0.75em);
+	}
+	.question-preview:nth-of-type(2n) { margin-right: 0 }
+}
+@media (min-width: 2000px) and (max-width: 2799px) {
+	.question-preview {
+		margin-right: 2.25em;
+		width: calc(100% / 3 - 1.5em);
+	}
+	.question-preview:nth-of-type(3n) { margin-right: 0 }
+}
+@media (min-width: 2800px) {
+	.question-preview {
+		margin-right: 2.5em;
+		width: calc(100% / 4 - 1.875em);
+	}
+	.question-preview:nth-of-type(4n) { margin-right: 0 }
 }
 .highlight {
 	color: #fff;
