--- a/http/dev/program.css
+++ b/http/dev/program.css
@@ -15,6 +15,7 @@ textarea.abs { top: 0; bottom: 0 }
 #footer {
 	position: absolute;
 	width: 100%;
+	top: 100%;
 }
 #main { padding: 0 }
 #content { padding-bottom: 0 }
