Set up slide edit page, fix html() \r bug

--- a/http/a/main.css
+++ b/http/a/main.css
@@ -74,7 +74,7 @@ code {
 .diamond { color: #000 }
 .private { color: #a4f }
 .disabled, a.disabled:hover, a.disabled:active { color: #999 }
-small, a.small, a.grey, .c-sig > *, .c-sig, footer, #nav a, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a, .user a, .c-sig a, .ctrls a { text-decoration: none }
+small, a.small, a.grey, .c-sig > *, .c-sig, footer, #nav a, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a, .user a, .c-sig a, .ctrls a, .ctrl { text-decoration: none }
 small, .small, footer, .ctrls a { font-size: 0.85em }
 small { font-weight: normal }
 abbr { border-bottom: 1px dashed #222 }
@@ -125,12 +125,6 @@ li {
 	-webkit-column-break-inside: avoid;
 	page-break-inside: avoid;
 	break-inside: avoid-column;
-}
-.justify { text-align: justify }
-.justify::after {
-	content: '';
-	display: inline-block;
-	width: 100%;
 }
 .answer-count {
 	display: inline-block;
